[gd_scene load_steps=6 format=3 uid="uid://bhepepw5vpnp6"]

[ext_resource type="Script" path="res://src/bullet.gd" id="1_t36c6"]
[ext_resource type="Texture2D" uid="uid://dwv5ut6shbwp6" path="res://images/bullet.png" id="2_lipo8"]
[ext_resource type="Shape2D" uid="uid://dec2orilhx7jf" path="res://collision_shapes/bullet_coll.tres" id="3_gjuun"]
[ext_resource type="AudioStream" uid="uid://bjn0nb3ognvu4" path="res://audio/bullet_bounce.wav" id="4_yjvxw"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_1l6mf"]
playback_mode = 2
random_pitch = 5.0
streams_count = 1
stream_0/stream = ExtResource("4_yjvxw")

[node name="Bullet" type="Area2D"]
process_mode = 1
script = ExtResource("1_t36c6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = ExtResource("3_gjuun")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
use_parent_material = true
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_lipo8")

[node name="BounceSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_1l6mf")

[connection signal="body_entered" from="." to="." method="_hit_body"]
